--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,71 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout
+<TableLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
         android:padding="20dp"
+        android:stretchColumns="0,1"
         tools:context=".MainActivity">
 
-    <Button
-            android:text="@string/startDate"
-            android:id="@+id/btn_startTimePicker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="0"/>
-    <TextView
-            android:id="@+id/text_startDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="1"/>
-    <Button
-            android:text="@string/endDate"
-            android:id="@+id/btn_endTimePicker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="1"
-            android:layout_column="0"/>
-    <TextView
-            android:id="@+id/text_endDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="1"
-            android:layout_column="1"/>
-    <TextView
-            android:id="@+id/text_extraAnimals"
-            android:text="@string/extraAnimals"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="2"
-            android:layout_column="0"/>
-    <EditText
-            android:inputType="number"
-            android:id="@+id/input_ExtraPets"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="2"
-            android:layout_column="1"/>
-    <TextView
-            android:id="@+id/text_transports"
-            android:text="@string/transports"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="3"
-            android:layout_column="0"/>
-    <EditText
-            android:inputType="number"
-            android:id="@+id/input_transports"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="3"
-            android:layout_column="1"/>
-    <Button
-            android:text="@string/calculate"
-            android:id="@+id/btn_calculate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="4"
-            android:layout_column="0"/>
-</GridLayout>
+    <TableRow>
+        <TextView
+                android:text="@string/rateTitle"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </TableRow>
+    <TableRow>
+        <Button
+                android:text="@string/startDate"
+                android:id="@+id/btn_startTimePicker"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="25dp"/>
+        <Button
+                android:text="@string/endDate"
+                android:id="@+id/btn_endTimePicker"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="25dp"/>
+    </TableRow>
+    <TableRow>
+        <TextView
+                android:id="@+id/text_startDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="25dp"/>
+        <TextView
+                android:id="@+id/text_endDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="25dp"/>
+    </TableRow>
+    <TableRow>
+        <TextView
+                android:id="@+id/text_extraAnimals"
+                android:text="@string/extraAnimals"
+                android:textStyle="bold"
+                android:layout_marginTop="25dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        <com.shawnlin.numberpicker.NumberPicker
+                android:id="@+id/input_extraPets"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:np_width="100dp"
+                app:np_height="50dp"
+                app:np_accessibilityDescriptionEnabled="true"
+                app:np_dividerColor="@color/black"
+                app:np_max="10"
+                app:np_min="0"
+                app:np_order="ascending"
+                app:np_orientation="horizontal"
+                app:np_selectedTextColor="@color/black"
+                app:np_fadingEdgeEnabled="false"
+                app:np_wrapSelectorWheel="true"
+                app:np_dividerType="underline" />
+    </TableRow>
+    <TableRow>
+        <TextView
+                android:id="@+id/text_transports"
+                android:text="@string/transports"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"/>
+        <com.shawnlin.numberpicker.NumberPicker
+                android:id="@+id/input_transports"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:np_width="100dp"
+                app:np_height="50dp"
+                app:np_accessibilityDescriptionEnabled="true"
+                app:np_dividerColor="@color/black"
+                app:np_max="10"
+                app:np_min="0"
+                app:np_order="ascending"
+                app:np_orientation="horizontal"
+                app:np_selectedTextColor="@color/black"
+                app:np_fadingEdgeEnabled="false"
+                app:np_wrapSelectorWheel="true"
+                app:np_dividerType="underline" />
+    </TableRow>
+    <TableRow>
+        <Button
+                android:text="@string/calculate"
+                android:id="@+id/btn_calculate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"/>
+    </TableRow>
+</TableLayout>
