--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,112 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
-        android:padding="20dp"
-        android:stretchColumns="0,1"
+        android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TableRow>
-        <TextView
-                android:text="@string/rateTitle"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-    </TableRow>
-    <TableRow>
-        <Button
-                android:text="@string/startDate"
-                android:id="@+id/btn_startTimePicker"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="25dp"/>
-        <Button
-                android:text="@string/endDate"
-                android:id="@+id/btn_endTimePicker"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="25dp"/>
-    </TableRow>
-    <TableRow>
-        <TextView
-                android:id="@+id/text_startDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="25dp"/>
-        <TextView
-                android:id="@+id/text_endDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="25dp"/>
-    </TableRow>
-    <TableRow>
-        <TextView
-                android:id="@+id/text_extraAnimals"
-                android:text="@string/extraAnimals"
-                android:textStyle="bold"
-                android:layout_marginTop="25dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        <com.shawnlin.numberpicker.NumberPicker
-                android:id="@+id/input_extraPets"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:np_width="100dp"
-                app:np_height="50dp"
-                app:np_accessibilityDescriptionEnabled="true"
-                app:np_dividerColor="@color/black"
-                app:np_max="10"
-                app:np_min="0"
-                app:np_order="ascending"
-                app:np_orientation="horizontal"
-                app:np_selectedTextColor="@color/black"
-                app:np_fadingEdgeEnabled="false"
-                app:np_wrapSelectorWheel="true"
-                app:np_dividerType="underline" />
-    </TableRow>
-    <TableRow>
-        <TextView
-                android:id="@+id/text_transports"
-                android:text="@string/transports"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"/>
-        <com.shawnlin.numberpicker.NumberPicker
-                android:id="@+id/input_transports"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:np_width="100dp"
-                app:np_height="50dp"
-                app:np_accessibilityDescriptionEnabled="true"
-                app:np_dividerColor="@color/black"
-                app:np_max="10"
-                app:np_min="0"
-                app:np_order="ascending"
-                app:np_orientation="horizontal"
-                app:np_selectedTextColor="@color/black"
-                app:np_fadingEdgeEnabled="false"
-                app:np_wrapSelectorWheel="true"
-                app:np_dividerType="underline" />
-    </TableRow>
-    <TableRow>
-        <Button
-                android:text="@string/calculate"
-                android:id="@+id/btn_calculate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"/>
-    </TableRow>
-</TableLayout>
+    <com.google.android.material.appbar.AppBarLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent">
+        <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                app:title="@string/app_name"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"/>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+            android:stretchColumns="0,1"
+            tools:context=".MainActivity">
+        <TableRow android:paddingTop="50dp">
+            <TextView
+                    android:text="@string/rateTitle"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+        </TableRow>
+        <TableRow>
+            <Button
+                    android:text="@string/startDate"
+                    android:id="@+id/btn_startTimePicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="25dp"/>
+            <Button
+                    android:text="@string/endDate"
+                    android:id="@+id/btn_endTimePicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="25dp"/>
+        </TableRow>
+        <TableRow>
+            <TextView
+                    android:id="@+id/text_startDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="25dp"/>
+            <TextView
+                    android:id="@+id/text_endDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="25dp"/>
+        </TableRow>
+        <TableRow>
+            <TextView
+                    android:id="@+id/text_extraAnimals"
+                    android:text="@string/extraAnimals"
+                    android:textStyle="bold"
+                    android:layout_marginTop="25dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            <com.shawnlin.numberpicker.NumberPicker
+                    android:id="@+id/input_extraPets"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:np_width="100dp"
+                    app:np_height="50dp"
+                    app:np_accessibilityDescriptionEnabled="true"
+                    app:np_dividerColor="@color/black"
+                    app:np_max="10"
+                    app:np_min="0"
+                    app:np_order="ascending"
+                    app:np_orientation="horizontal"
+                    app:np_selectedTextColor="@color/black"
+                    app:np_fadingEdgeEnabled="false"
+                    app:np_wrapSelectorWheel="false"
+                    app:np_dividerType="underline" />
+        </TableRow>
+        <TableRow>
+            <TextView
+                    android:id="@+id/text_transports"
+                    android:text="@string/transports"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"/>
+            <com.shawnlin.numberpicker.NumberPicker
+                    android:id="@+id/input_transports"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:np_width="100dp"
+                    app:np_height="50dp"
+                    app:np_accessibilityDescriptionEnabled="true"
+                    app:np_dividerColor="@color/black"
+                    app:np_max="10"
+                    app:np_min="0"
+                    app:np_order="ascending"
+                    app:np_orientation="horizontal"
+                    app:np_selectedTextColor="@color/black"
+                    app:np_fadingEdgeEnabled="false"
+                    app:np_wrapSelectorWheel="false"
+                    app:np_dividerType="underline" />
+        </TableRow>
+        <TableRow>
+            <Button
+                    android:text="@string/calculate"
+                    android:id="@+id/btn_calculate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"/>
+        </TableRow>
+    </TableLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
