--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,9 @@
 
     <TableLayout
             android:layout_width="match_parent"
+            android:background="@color/white"
             android:layout_height="match_parent"
             android:padding="20dp"
-            android:stretchColumns="0,1"
             tools:context=".MainActivity">
         <TableRow android:paddingTop="50dp">
             <TextView
@@ -41,18 +41,16 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="25dp"/>
-            <Button
-                    android:text="@string/endDate"
-                    android:id="@+id/btn_endTimePicker"
+            <TextView
+                    android:id="@+id/text_startDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="25dp"/>
         </TableRow>
         <TableRow>
-            <TextView
-                    android:id="@+id/text_startDate"
+            <Button
+                    android:text="@string/endDate"
+                    android:id="@+id/btn_endTimePicker"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
@@ -62,8 +60,6 @@
                     android:id="@+id/text_endDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="25dp"/>
         </TableRow>
         <TableRow>
